# crossplane

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: crossplane-ci.yml  release.yml
crossplane/: __init__.py  __main__.py  analyze.py  analyzer.py  builder.py  compat.py  errors.py  formatter.py  lex.py  lexer.py  objects.py  parse.py  parser.py  typedefs.py
crossplane/ext/: __init__.py  abstract.py  by_lua.py  lua.py
nginx_conf/: errors.py  lex.py
scripts/: check_absolute_paths.py  check_hardcoded_ips.py  format.py  lex.py  minify.py  parse.py
tests/: __init__.py  test_analyze.py  test_build.py  test_cli.py  test_errors.py  test_format.py  test_lex.py  test_objects.py  test_parse.py  test_snippets.py
tests/configs/bad-args/: nginx.conf
tests/configs/cli-test/: nginx.conf  payload.json
tests/configs/comments-between-args/: nginx.conf
tests/configs/directive-with-space/: nginx.conf
tests/configs/empty-value-map/: nginx.conf
tests/configs/includes-regular-combined/: nginx.conf  server.conf
tests/configs/lua-block/: nginx.conf
tests/configs/lua-block-larger/: nginx.conf
tests/configs/lua-block-simple/: nginx.conf
tests/configs/lua-block-tricky/: nginx.conf
tests/configs/many-directives/: nginx.conf  with-blocks.conf
tests/ext/: test_abstract.py  test_lua.py
(+22 files in other folders)
